kube/client-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websocket-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: websocket-client
  template:
    metadata:
      labels:
        app: websocket-client
    spec:
      containers:
        - name: websocket-client
          image: localhost:5001/client:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: websocket-client
spec:
  selector:
    app: websocket-client
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
