kube/server-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websocket-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: websocket-server
  template:
    metadata:
      labels:
        app: websocket-server
    spec:
      containers:
        - name: websocket-server
          image: localhost:5001/server:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: websocket-server
spec:
  selector:
    app: websocket-server
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
  type: LoadBalancer
