kube/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: websocket-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /server
            pathType: Prefix
            backend:
              service:
                name: websocket-server
                port:
                  number: 8888
          - path: /
            pathType: Prefix
            backend:
              service:
                name: websocket-client
                port:
                  number: 8080
